# sys2-f1-wheel-sim

./: .gitignore  .gitmodules  2  README.md  car-ecu.py
pico/: CMakeLists.txt
pico/lib/Config/: DEV_Config.c
pico/src/: blink.c  communication.c  communication.h  config.h  display.c  display.h  lv_conf.h  main.c  main.c~
src/: globals.py  simulator.py  terminal_curses.py  uart.py
